--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          # Use a PAT stored in secrets for pushing to protected branches
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate snake GIF and SVG
         uses: Platane/snk@master
@@ -41,7 +40,7 @@ jobs:
       - name: Push changes to master
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
           force: true
 
@@ -52,3 +51,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
