--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,7 +1,10 @@
+# GitHub Action: Generate Snake Contribution Graph
+
 name: Generate Snake
 
 on:
   schedule:
+    # Ejecuta cada 6 horas
     - cron: "0 */6 * * *"
   workflow_dispatch:
 
@@ -11,13 +14,34 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: GeorgeSan97
+
+          # Fondo TRANSPARENTE
+          background_color: transparent
+
+          # Colores de los puntos (estilo GitHub, buen contraste)
+          color_dots: |
+            #161b22,
+            #0e4429,
+            #006d32,
+            #26a641,
+            #39d353
+
+          # Color de la serpiente (alta visibilidad)
+          color_snake: "#ff7a18"
+
+          # Borde de la serpiente para más contraste
+          color_snake_outline: "#000000"
+
+          # Archivos de salida
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
