--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -23,10 +23,13 @@ jobs:
         with:
           github_user_name: GeorgeSan97
 
-          # 🎨 TEMA SOPORTADO (aquí SÍ cambian los colores)
-          theme: github-dark
+          # 👇 AQUÍ SÍ se pasan los colores (vía CLI args)
+          args: |
+            --background-color transparent
+            --color-dots "#161b22,#0e4429,#006d32,#26a641,#39d353"
+            --color-snake "#ff7a18"
+            --color-snake-outline "#000000"
 
-          # Archivos de salida
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
