--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,5 +1,3 @@
-# GitHub Action: Generate Snake Contribution Graph
-
 name: Generate Snake
 
 on:
@@ -15,20 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: GeorgeSan97
-
-          # 🎨 COLORES SOPORTADOS (vía args)
-          args: |
-            --color-dots "#161b22,#0e4429,#006d32,#26a641,#39d353"
-            --color-snake "#ff7a18"
-            --color-snake-outline "#000000"
-
+          args: --color-dots "#161b22,#0e4429,#006d32,#26a641,#39d353" --color-snake "#ff7a18" --color-snake-outline "#000000"
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake.gif
