--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -19,10 +19,9 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: GeorgeSan97
-          args: --color-dots "#161b22,#0e4429,#006d32,#26a641,#39d353" --color-snake "#ff7a18" --color-snake-outline "#000000"
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
+            dist/github-contribution-grid-snake.svg?palette=github-dark&snake=orange
+            dist/github-contribution-grid-snake.gif?palette=github-dark&snake=orange
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
