--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           github_user_name: GeorgeSan97
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=github&snake=orange
-            dist/github-contribution-grid-snake.gif?palette=github&snake=orange
+            dist/github-contribution-grid-snake.svg?palette=github-dark&snake=orange
+            dist/github-contribution-grid-snake.gif?palette=github-dark&snake=orange
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
