Enhance Generate Snake step in GitHub Actions
Updated the Generate Snake step to include output color parameters and modified the step name for clarity.

--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -18,14 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake
+      - name: Generate Snake (svg + gif)
         uses: Platane/snk@v3
         with:
           github_user_name: GeorgeSan97
-          args: --background-color transparent --color-dots "#161b22,#0e4429,#006d32,#26a641,#39d353" --color-snake "#ff7a18" --color-snake-outline "#000000"
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
+            # SVG (transparente por defecto): serpiente naranja
+            dist/github-contribution-grid-snake.svg?color_snake=%23ff7a18&color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353
+            # GIF (fondo transparente)
+            dist/github-contribution-grid-snake.gif?color_snake=%23ff7a18&color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353&color_background=transparent
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
