--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,40 +1,39 @@
-# GitHub Action: Generate Snake Contribution Graph
-
-name: Generate Snake
+name: Generate Custom Snake
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  snake:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Generate Snake (svg + gif)
-        uses: Platane/snk@v3
+      - name: Generate custom snake animation
+        uses: Platane/snk@master
         with:
           github_user_name: GeorgeSan97
           outputs: |
-            # SVG – transparente y naranja
             dist/github-contribution-grid-snake.svg
-            ?color_snake=%23ff7a18
-            &color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353
-
-            # GIF – fondo transparente
             dist/github-contribution-grid-snake.gif
-            ?color_snake=%23ff7a18
-            &color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353
-            &color_background=transparent
+        env:
+          SNAKE_COLOR: "#ff7a18"
+          BG_COLOR: "transparent"
+          DOT_COLOR_0: "#161b22"
+          DOT_COLOR_1: "#0e4429"
+          DOT_COLOR_2: "#006d32"
+          DOT_COLOR_3: "#26a641"
+          DOT_COLOR_4: "#39d353"
+          GIF_DELAY: "8"
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
